--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <video autoplay>
-  <source src="/src/xboxearrape.mp4" type="video/mp4" />
+  <source src="xboxearrape.mp4" type="video/mp4" />
   Your browser does not support the video tag.
 </video>
