--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
-<video autoplay>
-  <source src="xboxearrape.mp4" type="video/mp4" />
-  Your browser does not support the video tag.
-</video>
+<!DOCTYPE html>
+<html>
+
+<body>
+    <audio controls>
+        <source src=
+"xboxearrape.mp3"
+                type="audio/mp3">
+    </audio>
+</body>
+
+</html>
+  
