--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Soundboard</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
 <body>
-    <audio controls>
-        <source src=
-"xboxearrape.mp3"
-                type="audio/mp3">
-    </audio>
-</body>
+    <h1>My Soundboard</h1>
+    <div class="soundboard">
+        <button class="sound-button" data-sound="sound1">Sound 1</button>
+        <button class="sound-button" data-sound="sound2">Sound 2</button>
+        <button class="sound-button" data-sound="sound3">Sound 3</button>
+    </div>
 
+    <script src="script.js"></script>
+</body>
 </html>
-  
+
