--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <h1>My Soundboard</h1>
     <div class="soundboard">
-        <button class="sound-button" data-sound="sound1">Sound 1</button>
-        <button class="sound-button" data-sound="sound2">Sound 2</button>
-        <button class="sound-button" data-sound="sound3">Sound 3</button>
+        <button class="sound-button" data-sound="sound1">XBOX SERIES X STARTUP SOUND EARRAPE</button>
+        <button class="sound-button" data-sound="sound2">THOMAS THE TRAIN</button>
+        <button class="sound-button" data-sound="sound3">NINTENDO GAMECUBE</button>
     </div>
 
     <script src="script.js"></script>
