--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <button class="sound-button" data-sound="sound2">THOMAS THE TRAIN</button>
         <button class="sound-button" data-sound="sound3">NINTENDO GAMECUBE</button>
     </div>
+<label for="volume">Volume Boost:</label>
+<input type="range" id="volume" min="1" max="20" step="0.1" value="1">
 
     <script src="script.js"></script>
 </body>
