--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
     <h1>My Soundboard</h1>
     
     <div class="soundboard">
-        <button class="sound-button" data-sound="sound1">XBOX SERIES X STARTUP EARRAPE</button>
-        <button class="sound-button" data-sound="sound2">THOMAS THE TRAIN EARRAPE</button>
-        <button class="sound-button" data-sound="sound3">NINTENDO GAMECUBE EARRAPE</button>
-    </div>
+    <button class="sound-button" data-sound="xboxearrape">XBOX STARTUP SOUND EARRAPE</button>
+    <button class="sound-button" data-sound="thomasthetrain">Thomas the Train earrape</button>
+    <button class="sound-button" data-sound="gamecube">GameCube LOUD</button>
+    <button class="sound-button" data-sound="iphoneearrape">iPhone Earrape GET VERY LOUD</button>
+    <button class="sound-button" data-sound="thickofitearrape">Thick of It Earrape ;) </button>
+</div>
+
 
     <h2>Volume Boost</h2>
     <label for="volume">Volume:</label>
