--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
 
     <h2>Volume Boost</h2>
-    <label for="volume">Volume:</label>
-    <input type="range" id="volume" min="1" max="10" step="0.1" value="1">
+    <label for="volume">Volume Boost:</label>
+<input type="range" id="volume" min="1" max="5" step="0.1" value="1">
 
     <h2>Equalizer</h2>
     <label for="bass">Bass:</label>
