--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <button class="sound-button" data-sound="thomasthetrain">Thomas the Train earrape</button>
     <button class="sound-button" data-sound="gamecube">GameCube LOUD</button>
     <button class="sound-button" data-sound="iphoneearrape">iPhone Earrape GET VERY LOUD</button>
-    <button class="sound-button" data-sound="thickofitearrape">Thick of It Earrape ;) </button>
+    <button class="sound-button" data-sound="thickofitearrape">Thick of It Earrape</button>
 </div>
 
 
