--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <h1>My Soundboard</h1>
     
     <div class="soundboard">
-    <button class="sound-button" data-sound="xboxearrape">XBOX STARTUP SOUND EARRAPE</button>
-    <button class="sound-button" data-sound="thomasthetrain">Thomas the Train earrape</button>
-    <button class="sound-button" data-sound="gamecube">GameCube LOUD</button>
-    <button class="sound-button" data-sound="iphoneearrape">iPhone Earrape GET VERY LOUD</button>
-    <button class="sound-button" data-sound="thickofitearrape">Thick of It Earrape</button>
+    <button class="sound-button" data-sound="sound1">XBOX STARTUP SOUND EARRAPE</button>
+    <button class="sound-button" data-sound="sound2">Thomas the Train earrape</button>
+    <button class="sound-button" data-sound="sound3">GameCube LOUD</button>
+    <button class="sound-button" data-sound="sound4">iPhone Earrape GET VERY LOUD</button>
+    <button class="sound-button" data-sound="sound5">Thick of It Earrape</button>
 </div>
 
 
