--- a/index.html
+++ b/index.html
@@ -1,36 +1,18 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Soundboard with EQ & Volume Boost</title>
+    <title>Soundboard</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>My Soundboard</h1>
-    
     <div class="soundboard">
-    <button class="sound-button" data-sound="sound1">XBOX STARTUP SOUND EARRAPE</button>
-    <button class="sound-button" data-sound="sound2">Thomas the Train earrape</button>
-    <button class="sound-button" data-sound="sound3">GameCube LOUD</button>
-    <button class="sound-button" data-sound="sound4">iPhone Earrape GET VERY LOUD</button>
-    <button class="sound-button" data-sound="sound5">Thick of It Earrape</button>
-</div>
-
-
-    <h2>Volume Boost</h2>
-    <label for="volume">Volume Boost:</label>
-<input type="range" id="volume" min="1" max="5" step="0.1" value="1">
-
-    <h2>Equalizer</h2>
-    <label for="bass">Bass:</label>
-    <input type="range" id="bass" class="eq-slider" min="-10" max="10" step="1" value="0">
-
-    <label for="mid">Mid:</label>
-    <input type="range" id="mid" class="eq-slider" min="-10" max="10" step="1" value="0">
-
-    <label for="treble">Treble:</label>
-    <input type="range" id="treble" class="eq-slider" min="-10" max="10" step="1" value="0">
+        <button class="sound-button" data-sound="sound1">XBOX SERIES X STARTUP SOUND EARRAPE</button>
+        <button class="sound-button" data-sound="sound2">THOMAS THE TRAIN</button>
+        <button class="sound-button" data-sound="sound3">NINTENDO GAMECUBE</button>
+    </div>
 
     <script src="script.js"></script>
 </body>
