--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <button class="sound-button" data-sound="sound2">THOMAS THE TRAIN</button>
         <button class="sound-button" data-sound="sound3">NINTENDO GAMECUBE</button>
         <button class="sound-button" data-sound="sound4">IPHONE RINGTONE</button>
+        <button class="sound-button" data-sound="sound5">THICK OF IT EARRAPE</button>
     </div>
 
     <script src="script.js"></script>
