--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <button class="sound-button" data-sound="sound3">NINTENDO GAMECUBE</button>
         <button class="sound-button" data-sound="sound4">IPHONE RINGTONE</button>
         <button class="sound-button" data-sound="sound5">THICK OF IT EARRAPE</button>
+        <button class="sound-button" data-sound="sound5">N64 Earrape</button>
     </div>
 
     <script src="script.js"></script>
